# solidsmith

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml  release.yml
examples/: bit_organizer.py  honeycomb_bin.py  pebble_planter.py  phone_stand.py
src/solidsmith/: __init__.py  export.py  ops.py  part.py  preview.py  printers.py  report.py  sdf.py  workflow.py
tests/: test_solidsmith.py
